tests/expectations/compiler/function/scope_fail.out
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:9:22
     |
   9 |         let myGlobal = 42field;
     |                      ^
